WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267383
EventTarget shouldn't have a special case for wheel events
https://bugs.webkit.org/show_bug.cgi?id=267383
Summary
EventTarget shouldn't have a special case for wheel events
Ryosuke Niwa
Reported
2024-01-10 17:09:12 PST
Only DOMWindow and Node care about wheel events.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2024-01-10 17:15:06 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22634
EWS
Comment 2
2024-01-10 23:48:23 PST
Committed
272895@main
(167dc5118a3f): <
https://commits.webkit.org/272895@main
> Reviewed commits have been landed. Closing PR #22634 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-01-10 23:49:15 PST
<
rdar://problem/120830050
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug