EventTarget shouldn't have a special case for wheel events https://bugs.webkit.org/show_bug.cgi?id=267383

Reviewed by Yusuke Suzuki.

Move the code to invalidate event regions for wheel events from EventTarget to DOMWindow and Node.
Note that Node::removeAllEventListeners is only called when Document::removeAllEventListeners is
called in Document::~Document or Document::open so clearing it in Document::removeAllEventListeners
is sufficient.

* Source/WebCore/dom/Document.cpp:
(WebCore::Document::removeAllEventListeners):
* Source/WebCore/dom/EventTarget.cpp:
(WebCore::EventTarget::addEventListener):
(WebCore::EventTarget::removeEventListener):
(WebCore::EventTarget::removeAllEventListeners):
(WebCore::EventTarget::invalidateEventListenerRegions): Deleted.
* Source/WebCore/dom/EventTarget.h:
* Source/WebCore/dom/Node.cpp:
(WebCore::tryAddEventListener):
(WebCore::tryRemoveEventListener):
* Source/WebCore/page/LocalDOMWindow.cpp:
(WebCore::LocalDOMWindow::addEventListener):
(WebCore::LocalDOMWindow::removeEventListener):

Canonical link: https://commits.webkit.org/272895@main